to-learn-events

--- a/03_Event/one.html
+++ b/03_Event/one.html
@@ -21,7 +21,8 @@
    </div>
 </body>
 <script>
-    // document.getElementById('owl').onclick = function(){
+    <p1> see the documentation for this it will be easy </p1>
+        // document.getElementById('owl').onclick = function(){
     //     alert("owl clicked")
     // }
 
@@ -47,6 +48,8 @@
     //     e.stopPropagation()
     //     console.log("google clicked");
     // }, false)
+
+/* various example for the event call*/
    
 
 event 
